<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">JustJava</string>
    <!--Header text for the list of toppings ]CHAR limit =20]-->
    <string name="toppings">toppings</string>
    <!--checkbox title for whipped cream-->
    <string name="checkbox_cream">Whipped cream</string>
    <!--checkbox title for chocolate-->
    <string name="checkbox_choco">Chocolate</string>
    <!--Header text for the number of coffees-->
    <string name="content">How many coffees would you like?</string>
    <!--Order button text-->
    <string name="order">order</string>

    <!--Name message for the order summary. It'll be shown in the format of "Name: Amy" where Amy is the user's name[CHAR LIMIT=NONE]-->
    <string name="order_name">Name: <xliff:g id="name" example="Amy">%s</xliff:g></string>
    <!--Add cream message for the order summary. It'll be shown in the format of "Add Whipped cream? false" [CHAR LIMIT=NONE]-->
    <string name="add_cream">Add Whipped cream? <xliff:g id="add_cream" example="false">%s</xliff:g></string>
    <!--Add chocolate message for the order summary It'll be shown in the format of "Add Chocolate? true" [CHAR LIMIT=NONE]-->
    <string name="add_choco">Add chocolate? <xliff:g id="add_choco" example="true">%s</xliff:g></string>
    <!--Quantity message for the order summary.  It'll be shown in the format of "Quantity: 2" [CHAR LIMIT=NONE]-->-->
    <string name="quantity">Quantity: " <xliff:g id="quantity" example="2">%s</xliff:g></string>
    <!--Total message for the order summary.  It'll be shown in the format of "Total: 14" [CHAR LIMIT=NONE]-->-->
    <string name="total">Total: $<xliff:g id="total" example="14">%s</xliff:g></string>
    <!--Thank you message for the order summary-->
    <string name="thank_you">Thank you!</string>

</resources>
